[package]
name = "ring-lang-rs"
version = "0.1.14"
edition = "2024"
description = "Rust bindings for the Ring programming language"
license = "MIT"
repository = "https://github.com/ysdragon/ring-lang-rs"
homepage = "https://ring-lang.github.io/"
documentation = "https://docs.rs/ring-lang-rs"
readme = "README.md"
keywords = ["ring", "ffi", "bindings", "extension", "language"]
categories = ["api-bindings", "development-tools::ffi"]
rust-version = "1.85"

[lib]
name = "ring_lang_rs"
crate-type = ["rlib"]

[build-dependencies]
cc = "1.2"

[features]
default = ["ring-std"]
static = []
no-link = []
extension = []
ring-std = ["ring-list", "ring-math", "ring-file", "ring-os", "ring-dll", "ring-refmeta", "ring-info"]
ring-list = []
ring-math = []
ring-file = []
ring-os = []
ring-dll = []
ring-refmeta = []
ring-info = []
